--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <form>
                 <input placeholder="Digite um título" type="text" id="titulo">
                 <input placeholder="Digite uma descrição" type="text" id="descricao">
-                <button type="button">Cadastrar</button>
+                <button id="botaoCadastrar" type="button">Cadastrar</button>
             </form>
             <div class="resultados">
                 <div id="resultado">
